added deployment.yaml file

--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
   "homepage": "https://github.com/cobiwave/simplefolio#readme",
   "devDependencies": {
     "@parcel/transformer-sass": "^2.8.2",
+    "netlify-cli": "^17.35.0",
     "parcel": "^2.8.2",
     "prettier": "^2.8.1"
   },
